<resources>
    <string name="app_name">TransportMainApp</string>
    <string name="register_user">Register User</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="fullName">Full Name</string>
    <string name="your_amazing_app_for_travel">Your Amazing App for travel</string>
    <string name="travelnow">TravelNow</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>